# emassage

./: PROJECT.md  SPECIFICATION.md  Taskfile.yml  package-lock.json  package.json  vitest.config.ts
directive/: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  PRD.md  PROJECT.md  README.md  REFERENCES.md  ROADMAP.md  SKILL.md  SPECIFICATION.md  Taskfile.yml  commands.md  go.mod  main.md  pyproject.toml  run  run.bat  run.py  session.txt  session2.txt
directive/.github/: PULL_REQUEST_TEMPLATE.md
directive/coding/: build-output.md  coding.md  holzmann.md  testing.md  toolchain.md
directive/context/: context.md  deterministic-split.md  examples.md  fractal-summaries.md  long-horizon.md  spec-deltas.md  tool-design.md  working-memory.md
directive/contracts/: boundary-maps.md  hierarchy.md
directive/core/: glossary.md  project.md  ralph.md  versioning.md
directive/deployments/: README.md
directive/docs/: ai-coding-trust-paradox.md  claude-code-integration.md  getting-started.md  superpowers.md
directive/history/: README.md  analysis-2026-03-22-issue-chain-68-94.md  implementation-2026-03-13-fix-interview-strategy.md  plan-2026-03-11-cross-platform-agent-skills.md  plan-2026-03-12-cross-platform-agent-skills-impl.md  plan-2026-03-12-go-installer-impl.md  plan-2026-03-12-single-entry-installer.md  plan-2026-03-13-fix-interview-strategy.md  plan-2026-03-29-fix-vbrief-generation.md  todo-2026-03-13-retired.md
directive/interfaces/: cli.md  rest.md  web.md
directive/languages/: 6502-DASM.md  c.md  commands.md  cpp.md  csharp.md  dart.md  delphi.md  elixir.md  go.md  java.md  javascript.md  julia.md  kotlin.md  markdown.md  mermaid.md  python.md  r.md  rust.md  sql.md  swift.md  typescript.md  vhdl.md  visual-basic.md  zig.md
directive/meta/: SOUL.md  code-field.md  lessons.md  morals.md  philosophy.md
directive/resilience/: context-pruning.md  continue-here.md
directive/scm/: changelog.md  git.md  (+1 more)
(+184 files in other folders)
