[project]
name = "deft-directive"
version = "0.5.0"
description = "A layered framework for AI-assisted development with consistent standards and workflows"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "black>=23",
    "mypy>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_count = 0  # Prevent WinError 448: pytest-current symlink cleanup fails on Windows 11 24H2+ (#281)
# --cov is intentionally absent here. Use `task test:coverage` for coverage runs.
# Adding --cov to addopts causes false failures when running content tests in
# isolation (no Python source is exercised, so coverage reports 0%).

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*",
    "run",      # terminal-only CLI -- excluded pending refactor (#228)
    "run.py",   # importlib shim for run -- excluded pending refactor (#228)
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
exclude = [
    ".venv",
    "__pycache__",
    "run",        # extension-less CLI entry point — not linted in Phase 1
    "run.py",     # importlib shim for tests — inherent E402/I001
    "warping.sh",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM"]

[tool.black]
line-length = 100
exclude = '''
/(
    \.venv
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^run$",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false
